feat: Introduce blog functionality with new posts, UI components, and supporting features like a navbar, pricing card, and API webhook.

--- a/posts/scheduling-mistakes.mdx
+++ b/posts/scheduling-mistakes.mdx
@@ -5,7 +5,7 @@ category: "Productivity Tips"
 date: "2024-04-26"
 readTime: "6 min read"
 excerpt: "Learn about the most common scheduling pitfalls and practical strategies to overcome them."
-coverImage: "/blog/mistakes.jpg"
+coverImage: "/blog/scheduling-mistakes-cover.png"
 author: "Sarah Johnson"
 featured: false
 ---
