--- a/posts/time-saving-features.mdx
+++ b/posts/time-saving-features.mdx
@@ -5,7 +5,7 @@ category: "Productivity Tips"
 date: "2024-05-20"
 readTime: "6 min read"
 excerpt: "Uncover hidden features in your scheduling tools that can save you hours every week."
-coverImage: "/blog/time-saving.jpg"
+coverImage: "/blog/time-saving-cover.png"
 author: "John Smith"
 featured: false
 ---
