--- a/付费逻辑.md
+++ b/付费逻辑.md
@@ -33,7 +33,15 @@
 - **规则**: 不能购买任何计划
 - **前端显示**: 按钮禁用，显示 "You're a lifetime member!"
 
-## 4. Monthly 自动续订
+## 4. Monthly 用户升级 Lifetime
+
+- **规则**: 允许升级
+- **关键处理**: 自动调用 Creem API 取消 Monthly 订阅
+  - 避免用户继续被扣费
+  - 避免续费时 webhook 覆盖 Lifetime 状态
+- **技术实现**: `cancelCreemSubscription()` 调用 `POST /v1/subscriptions/{id}/cancel`
+
+## 5. Monthly 自动续订
 
 - **规则**: 由 Creem 支付网关自动处理
 - **Webhook**: `onGrantAccess` 事件在续订时触发
