feat: Add daily calendar view with drag-to-create events and event/settings management dialogs.

--- a/1-develop_doc/0-问答记录.md
+++ b/1-develop_doc/0-问答记录.md
@@ -1435,3 +1435,75 @@ Next.js version: 16.0.7 (Turbopack)
 
 当前代码里的实现逻辑跟我描述的这些是有冲突的，你复合一下。如果你不明白我描述的这个逻辑，我可以再做详细补充。
 
+# 27.重要，settings的时间逻辑调整
+
+![image-20251221215001657](./assets/image-20251221215001657.png)
+
+如图所示，假定起始时间为A，假定终结时间为B。对`settings`下的`working hours`的时间逻辑做如下调整：
+
+## 1、如图所示，假定起始时间为A
+
+- 当用户使用默认设置时，A显示的默认值为：`8:00 AM`。（当前符合要求）
+
+- A的下拉选项里，可调节的时间范围显示为：`0:00 AM` - `11 PM`，也就是说，A的时间范围是凌晨0点至晚上11点。
+
+## 2、如图所示，假定终结时间为B
+
+- 当用户使用默认设置时，B显示的默认值为：`5:00 PM`。（当前符合要求）
+
+- B的下拉选项里，可调节的时间范围显示为：`A+1小时` - `12 PM`，也就是说，B的时间范围是`A+1`点至晚上12点。
+
+## 3、时间A和时间B的关系
+
+- 当A的时间修改确定了时，如果B的时间不在 `A+1小时` - `12 PM`范围内，则把B的时间改为 `A+1`
+
+# 28.重要，时间逻辑
+
+- 假设当前视图（日视图、周视图）里的起始时间为`A`，结束时间为`B`。
+- 假设当`add-event-dialog.tsx` `EditEventDialog.tsx`里的`start`的时间为`C`，`end`的时间为`D`。
+
+## 1、情况一
+
+- 当用户点击`add-event-dialog.tsx` - `start` - 下拉菜单，修改好`C`的时间后，会对`C`的时间进行检测：
+  - 如果 `A` ≤ `C` ≤ `B-15分钟`，则符合要求
+  - 如果`C `＜ `A`，则把`C`的时间改为`A`；如果`C `＞ `B-15分钟`，则把`C`的时间改为`B-15分钟`
+
+- 当`C`的时间修改完成后，会对`D`的时间进行检测：
+  - 如果 `C+15分钟` ≤ `D` ≤ `B分钟`，则符合要求
+  - 如果`D`＜ `C+15分钟`，则把`D`的时间改为`C+15分钟`；如果`D`＞ `B`，则把`D`的时间改为`B`
+
+
+## 2、情况二
+
+- 当用户点击`add-event-dialog.tsx`  - `end` - 下拉菜单，修改好`D`的时间后，会对`D`的时间进行检测：
+  - 如果 `A+15分钟` ≤ `D` ≤ `B`，则符合要求
+  - 如果`D`＜ `A+15分钟`，则把`D`的时间改为`A+15分钟`；如果`D`＞ `B`，则把`D`的时间改为`B`
+- 当`D`的时间修改完成后，会对`C`的时间进行检测：
+  - 如果 `A` ≤ `C` ≤ `D-15分钟`，则符合要求
+  - 如果`C`＜ `A`，则把`C`的时间改为`A`；如果`C`＞ `D-15分钟`，则把`C`的时间改为`D-15分钟`
+
+# 29.时间逻辑2
+
+- 备注：你需要先梳理之前定好的那个时间设定的逻辑，把之前的那个逻辑删掉。改成如下的这个逻辑判定：
+
+## 1、对eventform.tsx里的时间设定逻辑进行调整：
+
+- 假设当前视图（日视图、周视图）里的起始时间为`A`，结束时间为`B`。
+- 假设当`add-event-dialog.tsx` `EditEventDialog.tsx`里的`start`的时间为`C`，`end`的时间为`D`。
+- A、B、C、D的整体关系满足：`A` ≤ `C` ≤ `D-15分钟` ≤ `B-15分钟`
+
+## 2、当用户设定好`C`和`D`的时间，点击`确定`的时候：
+
+- 如果 `A` ≤ `C` ≤ `B-15分钟`，则符合要求
+  - 如果`C `＜ `A`，则把`C`的时间改为`A`；如果`C`＞ `B-15分钟`，则把`C`的时间改为`B-15分钟`
+
+- 如果 `A+15分钟` ≤ `D` ≤ `B`，则符合要求
+  - 如果`D`＜ `A+15分钟`，则把`D`的时间改为`A+15分钟`；如果`D`＞ `B`，则把`D`的时间改为`B`
+
+- `C` ≤ `D-15分钟` ，则符合要求
+  - 如果`C` ＞ `D-15分钟`，则把`D`的时间改为`C+15分钟`
+
+### 
+
+
+
