feat: Implement schedule export dialog supporting image, PDF, and CSV formats with Pro features and GA tracking.

--- a/1-develop_doc/0-问答记录.md
+++ b/1-develop_doc/0-问答记录.md
@@ -1515,5 +1515,61 @@ Next.js version: 16.0.7 (Turbopack)
 
 这些是"锦上添花"类型的优化，当前代码库已经处于良好状态。如果你希望继续执行这些额外优化，我可以继续进行！
 
+# 31.Google Analytics 
+
+## 按照如下流程执行
+
+#### 安装官方插件
+
+在你的项目终端运行：
+
+```Bash
+npm install @next/third-parties
+```
+
+#### 在代码中配置
+
+打开你的根布局文件 `app/layout.tsx`。
+
+```TypeScript
+// app/layout.tsx
+import { GoogleAnalytics } from '@next/third-parties/google' // 👈 导入组件
+
+export default function RootLayout({
+  children,
+}: {
+  children: React.ReactNode
+}) {
+  return (
+    <html lang="en">
+      <body>
+        {children}
+      </body>
+      <GoogleAnalytics gaId="G-7FJ22TH53B" /> {/* 👈 填入你的测量 ID */}
+    </html>
+  )
+}
+```
+
+#### 本地验证
+
+1. 在本地运行 `npm run dev`。
+2. 打开浏览器访问你的网站。
+3. 回到 Google Analytics 后台，查看“实时” (Real-time) 报告。如果你看到现在有 1 个访客，说明部署成功。
+
+### 进阶：如何跟踪“导出图片”这个动作？
+
+作为工具类网站，知道有多少人真正“导出”了排班表非常重要。你可以在导出按钮的点击事件中加入这段代码：
+
+```TypeScript
+import { sendGAEvent } from '@next/third-parties/google'
+
+// 在你的导出函数里调用
+const handleExport = () => {
+  // ... 你的导出逻辑
+  sendGAEvent({ event: 'button_clicked', value: 'export_schedule' })
+}
+```
+
 
 
