feat: add root layout with comprehensive SEO, analytics, and context providers, and introduce a dedicated privacy policy page.

--- a/1-develop_doc/0-问答记录.md
+++ b/1-develop_doc/0-问答记录.md
@@ -1571,5 +1571,44 @@ const handleExport = () => {
 }
 ```
 
+# 32.`microsoft clarity`
+
+## 按照如下流程执行
+
+### 在代码中配置
+
+打开你的根布局文件 `app/layout.tsx`。
+
+```TypeScript
+// app/layout.tsx
+import { GoogleAnalytics, MicrosoftClarity } from '@next/third-parties/google' // 👈 增加导入 Clarity
+
+export default function RootLayout({
+  children,
+}: {
+  children: React.ReactNode
+}) {
+  return (
+    <html lang="en">
+      <body>
+        {children}
+      </body>
+      {/* 部署 Google Analytics */}
+      <GoogleAnalytics gaId="G-XXXXXXXXXX" /> 
+      
+      {/* 部署 Microsoft Clarity */}
+      <MicrosoftClarity id="uqfjakaw9j" /> {/* 👈 填入获取到的 Project ID */}
+    </html>
+  )
+}
+```
+
+------
+
+### 关于隐私和法律
+
+- **数据脱敏：** Clarity 默认会把用户输入的敏感文字（如登录密码）打码，但在排班表这种场景，建议在 Clarity 后台确认一下隐私设置，确保不会泄露用户的隐私日程。
+- **隐私声明：** 既然你部署了这些工具，请确保你的 `/privacy` (隐私政策) 页面里提到了你会使用第三方工具（Google 和 Microsoft）收集匿名数据。
+
 
 
