feat: Add blog, pricing, and dynamic templates pages, implement a new root layout with SEO and analytics, include a sitemap and export dialog, and update documentation.

--- a/1-develop_doc/品牌名.md
+++ b/1-develop_doc/品牌名.md
@@ -10,7 +10,7 @@
 
 ### 1. 为什么必须改成 `TrySchedule`？
 
-- **建立信任 (E-E-A-T):** 用户输入 `TrySchedule.com`，如果看到 Logo 写的是 "Schedule Builder"，会产生一种“我进了一个山寨模板网站”的廉价感。品牌名和域名一致，是建立信任的第一步。
+- **建立信任 (E-E-A-T):** 用户输入 `www.TrySchedule.com`，如果看到 Logo 写的是 "Schedule Builder"，会产生一种“我进了一个山寨模板网站”的廉价感。品牌名和域名一致，是建立信任的第一步。
 - **避免过度优化 (Over-Optimization):** 如果你的 Logo、标题、页脚全是 "Schedule Builder"，Google 可能会认为你在恶意堆砌关键词（Keyword Stuffing），反而导致降权。
 - **品牌资产:** 你未来可能还要做 `Roster Maker` 或 `Shift Planner`。如果你叫 `TrySchedule`，这些都可以包含在内；如果你叫 `Schedule Builder`，就把自己路走窄了。
 
