feat: Add core website pages, blog content, and SEO metadata.

--- a/posts/acme-case-study.mdx
+++ b/posts/acme-case-study.mdx
@@ -4,7 +4,7 @@ slug: "acme-case-study"
 category: "Case Studies"
 date: "2024-05-10"
 readTime: "7 min read"
-excerpt: "Discover how Acme Corporation transformed their meeting culture and reclaimed valuable work hours using smart scheduling strategies."
+excerpt: "Discover how Acme Corporation transformed their meeting culture using smart scheduling strategies."
 coverImage: "/blog/case-study-cover.png"
 author: "Emily Roberts"
 featured: false
