--- a/posts/async-communication.mdx
+++ b/posts/async-communication.mdx
@@ -4,7 +4,7 @@ slug: "async-communication"
 category: "Productivity Tips"
 date: "2024-05-22"
 readTime: "8 min read"
-excerpt: "Discover how async communication can transform your team's productivity and reduce meeting fatigue, leading to more focused work and better outcomes."
+excerpt: "Discover how async communication can transform your team's productivity and reduce meeting fatigue."
 coverImage: "/blog/async-cover.png"
 author: "Jane Doe"
 featured: true
