--- a/posts/calendar-integrations.mdx
+++ b/posts/calendar-integrations.mdx
@@ -4,7 +4,7 @@ slug: "calendar-integrations"
 category: "Integrations"
 date: "2024-05-05"
 readTime: "4 min read"
-excerpt: "Maximize your productivity by connecting Schedule Builder with the tools you already use every day."
+excerpt: "Maximize your productivity by connecting Schedule Builder with the tools you use every day."
 coverImage: "/blog/integrations-cover.png"
 author: "Alex Thompson"
 featured: false
