--- a/posts/quarterly-planning.mdx
+++ b/posts/quarterly-planning.mdx
@@ -4,7 +4,7 @@ slug: "quarterly-planning"
 category: "Product Updates"
 date: "2024-05-15"
 readTime: "5 min read"
-excerpt: "Learn how to leverage our powerful new timeline view to plan your entire quarter effectively and keep your team aligned."
+excerpt: "Learn how to leverage our powerful new timeline view to plan your entire quarter effectively."
 coverImage: "/blog/quarterly-planning-cover.png"
 author: "Mike Chen"
 featured: false
