--- a/posts/remote-work-best-practices.mdx
+++ b/posts/remote-work-best-practices.mdx
@@ -4,7 +4,7 @@ slug: "remote-work-best-practices"
 category: "Productivity Tips"
 date: "2024-04-20"
 readTime: "5 min read"
-excerpt: "Master the art of remote collaboration with proven strategies for staying productive and connected with your distributed team."
+excerpt: "Master the art of remote collaboration with proven strategies for staying productive and connected."
 coverImage: "/blog/remote-work-cover.png"
 author: "Lisa Wang"
 featured: false
