--- a/posts/tagging-system.mdx
+++ b/posts/tagging-system.mdx
@@ -4,7 +4,7 @@ slug: "tagging-system"
 category: "Product Updates"
 date: "2024-05-01"
 readTime: "5 min read"
-excerpt: "Organize your events with our powerful new tagging feature. Learn how tags can transform your scheduling workflow."
+excerpt: "Organize your events with our powerful new tagging feature. Learn how tags transform your workflow."
 coverImage: "/blog/tagging-cover.png"
 author: "David Park"
 featured: false
