--- a/1-develop_doc/0-问答记录.md
+++ b/1-develop_doc/0-问答记录.md
@@ -1609,3 +1609,66 @@ export default function RootLayout({
 
 - **数据脱敏：** Clarity 默认会把用户输入的敏感文字（如登录密码）打码，但在排班表这种场景，建议在 Clarity 后台确认一下隐私设置，确保不会泄露用户的隐私日程。
 - **隐私声明：** 既然你部署了这些工具，请确保你的 `/privacy` (隐私政策) 页面里提到了你会使用第三方工具（Google 和 Microsoft）收集匿名数据。
+
+# 33.
+
+我现在想在首页增加如下内容：
+
+> ## **首页内容:** 在编辑器下方增加 500 字左右的产品介绍文本。
+>
+> 现在的首页可能只有一个大大的编辑器，这对用户很友好，但对 Google 很不友好（因为它看不到字）。
+>
+> 在排班表组件下方，增加以下文本区块：
+>
+> - **H2: Why is TrySchedule the best free online schedule builder?**
+>   - 写 3 点：Zero Friction (No login required), Instant Export (PNG/PDF), Privacy First (Local storage).
+> - **H2: How to create a weekly schedule in 3 steps**
+>   - Step 1: Drag tasks... 
+>   - Step 2: Customize colors... 
+>   - Step 3: Download...
+> - **H2: Who needs a schedule maker?**
+>   - 涵盖关键词：Students, Shift Managers, Gym Goers, Freelancers.
+> - **FAQ (常见问题 - 这是 SEO 金矿):**
+>   - "Is this schedule builder free?" (包含关键词 Free)
+>   - "Can I print my schedule?" (包含关键词 Printable)
+
+但是目前首页没有合适的空间，放下这段文本，你有什么看法？
+
+# 34.
+
+## 1、滚动条在浏览器窗口右侧（页面级）
+
+- 首页现在的布局：滚动条都在导航栏下方（内容区域内），是正确的
+- 其他页面参考首页现在的布局
+
+## 2、导航栏左侧的 "TrySchedule" 文字被截断了
+
+- 这个没问题，这是我截图的范围原因。
+
+# 35.Q
+
+当前首页的title和 description：
+
+> - title : TrySchedule | The #1 Free Schedule Builder (No Login)
+>
+> - description : TrySchedule is the easiest free online schedule builder for students, managers, and teams. Create beautiful schedules in minutes.
+
+和下面的这个比：
+
+> - **Title:** `TrySchedule | Free Online Schedule Builder (No Login Required)`
+> - **Description:** *“The easiest way to build weekly schedules. Drag and drop interface, instant export to image/PDF. No signup needed. Perfect for employees, students, and gyms.”*
+
+你认为哪个写的更好，更适合本项目？
+
+## A
+
+TrySchedule | Free Online Schedule Builder (No Login Required)
+
+The easiest free online schedule builder. Drag-and-drop interface, instant export to PNG/PDF. No signup needed. Perfect for students, managers, and gyms.
+
+
+
+
+
+
+
