feat: Implement core schedule builder page with event management, day/week calendar views, and supporting UI components including sidebar, mobile toolbar, and dialogs.

--- a/1-develop_doc/0-问答记录.md
+++ b/1-develop_doc/0-问答记录.md
@@ -1666,6 +1666,26 @@ TrySchedule | Free Online Schedule Builder (No Login Required)
 
 The easiest free online schedule builder. Drag-and-drop interface, instant export to PNG/PDF. No signup needed. Perfect for students, managers, and gyms.
 
+# 36.Q
+
+我在`PC`端和移动端对项目的首页进行了测试，我认为修改之后的首页的用户体验不佳，用户体验不佳的原因，就是因为在首页的下方加入了`Frequently Asked Questions`和页脚，导致首页出现了竖向滚动条。
+
+我的想法是：
+
+> 1、移除首页下方的`Frequently Asked Questions`
+>
+> 2、移除首页下方的`footer`
+>
+> 3、恢复首页之前的布局
+>
+> 4、在侧边栏里加入一个按钮A，当用户点击侧边栏的按钮时。就会出现原`Frequently Asked Questions`的内容。
+
+这样的话保证首页编辑器布局的完整同时没有竖向的滚动条，恢复首页原有的布局，提升用户体验。
+
+关于`Frequently Asked Questions`的内容，我们保证侧边栏里这个按钮A里的内容不会采用懒加载或者动态加载的技术，保证爬虫爬取的时候，都保证它能爬取到这些相关的内容。
+
+这样的话，对SEO是不是仍然是友好的？
+
 
 
 
